2015-10-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Overview): Put contents of a footnote in the 
	main text.

2015-10-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\entry) <no page numbers>: Add a \hfill where 
	\indexdotfill would be.  This prevents a short part name being 
	split across lines in a table of contents.

2015-10-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\pdfurl): Define \xprocessmacroarg in case we 
	are in a macro expansion.  Problem with @email used via a @macro 
	in PDF output reported by Arnold Robbins.

2015-10-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/variables.c (info_variables): New user variable 'nodeline'.
	* info/info-utils.c (parse_top_node_line): Depending on value of 
	user variable 'nodeline', include more or less of the nodeline 
	in the displayed node.
	(scan_node_contents): Set inptr after calling parse_top_node_line.
	* info/nodes.c (info_node_of_tag): Check contents field of a tag 
	table entry to see if the node has to be (re-)scanned.  Don't 
	null contents field after scan_node_contents returns.
	* info/session.c (gc_file_buffers_and_nodes): Clear contents 
	field of tags table when gc'ing a file buffer.
	* info/t/Infokey-config: Set 'nodeline'.

	* info/session.c (info_keep_one_window):
	Call gc_file_buffers_and_nodes.

2015-10-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (ref_rendition, hl_ref_rendition, match_rendition):
	Use non-plain default renditions.
	(display_update_node_text): Still highlight cross-references if 
	hl_ref_rendition is given but ref_rendition isn't.

2015-10-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Defining Macros, Macro Details): Advice on 
	ending a macro body with '@c'.

2015-10-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/30section.t: Add new test 'loweredheading'.

2015-10-02  Gavin Smith  <gavinsmith0123@gmail.com>
